<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/cafe_da_manha"/>
	<EditText 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/mg_dl" 
	    android:inputType="number"
	    android:id="@+id/valor_cafe_glicemia"/>
	
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/almoco"/>
	<EditText 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/mg_dl" 
	    android:inputType="number"
	    android:id="@+id/valor_almoco_glicemia"/>

	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/jantar"/>
	<EditText 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/mg_dl" 
	    android:inputType="number"
	    android:id="@+id/valor_jantar_glicemia"/>
	
	<Button 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/salvar"
	    android:id="@+id/salvar_glicemia"/>
</LinearLayout>
