<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_weight="1"
    android:background="@color/blue" >

	<Button 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/nova_medicao"
	    android:id="@+id/nova_medicao"/>
	
	<Button 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/lista_glicemias"
	    android:id="@+id/lista_glicemias"/>
	
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/media_de_hoje"/>
	
	<EditText 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:enabled="false"
	    android:id="@+id/media_glicemia_hoje"
	    android:hint=""
	    android:textColor="#fff"/>
	
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/media_dessa_semana"/>
	
	<EditText 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:enabled="false"
	    android:id="@+id/media_glicemia_semana"
	    android:hint=""
	    android:textColor="#fff"/>
	
	<TextView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/media_desse_mes"/>
	
	<EditText 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:enabled="false"
	    android:id="@+id/media_glicemia_mes"
	    android:hint=""
	    android:textColor="#fff"/>

</LinearLayout>