<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextClock
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:format24Hour="k:mm"
        tools:ignore="NewApi" 
        android:id="@+id/hora_glicemia"/>

	<TextClock
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    tools:ignore="NewApi" 
	    android:id="@+id/data_glicemia"
	    android:format24Hour="dd/MM/yyyy" />
    
    <Spinner
        android:id="@+id/tipo_refeicao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/refeicoes_array" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor_glicemia" />

    <EditText
        android:id="@+id/valor_glicemia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mg_dl"
        android:inputType="number" />

    <Button
        android:id="@+id/salvar_glicemia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar" />

</LinearLayout>