<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >
    
   
       
    <ScrollView
            android:id="@+id/dados_medicos_scrollView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fillViewport="true">
            
            <TextView
                android:id="@+id/dados_medicos_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:paddingLeft="6dip"
                android:paddingRight="6dip"
                android:paddingTop="6dip" 
                android:text="@string/dados_medicos_aviso"/>
    </ScrollView>
    
    <LinearLayout
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:gravity="center_vertical"
		android:orientation="horizontal"
        >
    	<Button
        	android:id="@+id/confirmar_button"
        	android:text="@string/confirmar_dados_medicos"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:layout_gravity="center_horizontal"
        	android:gravity="center"
        	android:paddingBottom="6dip"
			android:paddingLeft="6dip"
			android:paddingRight="6dip"
			android:paddingTop="6dip"
        />
    
   		<Button 
        	android:id="@+id/cancelar_button"
     	    android:text= "@string/cancelar_dados_medicos"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:layout_gravity="center_horizontal"
        	android:gravity="center"
        	android:paddingBottom="6dip"
			android:paddingLeft="6dip"
			android:paddingRight="6dip"
			android:paddingTop="6dip"
        />    
    </LinearLayout>
    
    
    

</LinearLayout>
